force-app/main/default/objects/FS_ZOM__c/FS_ZOM__c.object-meta.xml
<CustomObject>
    <label>ZOM</label>
    <nameField>
        <label>ZOM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>