force-app/main/default/objects/FS_ZOM__c/fields/FS_Cell__c.field-meta.xml
<CustomField>
    <fullName>FS_Cell__c</fullName>
    <label>Cell</label>
    <type>Phone</type>
</CustomField>