force-app/main/default/objects/FS_ZOM__c/fields/FS_Fax__c.field-meta.xml
<CustomField>
    <fullName>FS_Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>