force-app/main/default/objects/FS_ZOM__c/fields/FS_First_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_First_Name__c</fullName>
    <label>First Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>