force-app/main/default/objects/FS_ZOM__c/fields/FS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>