force-app/main/default/objects/FS_ZOM__c/fields/FS_Office__c.field-meta.xml
<CustomField>
    <fullName>FS_Office__c</fullName>
    <label>Office</label>
    <type>Phone</type>
</CustomField>