force-app/main/default/objects/FS_ZOM__c/fields/FS_Region__c.field-meta.xml
<CustomField>
    <fullName>FS_Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>