force-app/main/default/objects/FS_ZOM__c/fields/FS_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zone Operations Mgr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>