force-app/main/default/objects/FS_ZOM__c/fields/FS_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>FS_Voicemail__c</fullName>
    <label>Voicemail</label>
    <type>Phone</type>
</CustomField>